# vrp

./: .gitignore  Cargo.toml  README.md  best_so_far.csv  fitness_data.csv  mrt_data.json
.github/workflows/: rust.yml
data/: customers.csv  geo_cache.json  routes.json
osrm/: Dockerfile  README.md  docker-compose.yml
scripts/: generate_random_customers.py  plot_routes.py  pyproject.toml  routes_map.html  visualize.py
src/: config.rs  core_logic.rs  evaluation.rs  lib.rs  main.rs  setup.rs  utils.rs  visualization.py
src/api/: google_api.rs  mod.rs  osrm_api.rs
src/database/: sqlx.rs
src/distance/: matrix.rs  mod.rs
src/distance/providers/: google.rs  mod.rs  osrm.rs
src/domain/: mod.rs  solution.rs  types.rs
src/evaluation/: eval_funcs.rs  fitness.rs  mod.rs  penalty.rs  visualization.py
src/fixtures/: data_generator.rs  mod.rs
src/phases/: core_logic.rs  mod.rs  phases_types.rs
src/setup/: init.rs  init_types.rs  mod.rs  type.rs
src/solver/: mod.rs
src/solver/tabu_search/: diversification.rs  mod.rs  neighborhood.rs  repair.rs  search.rs  tabu.rs
src/test/: input_generator.rs  mod.rs  mrt_postals.rs
