[package]
name = "VRP"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }     # For HTTP requests
tokio = { version = "1", features = ["full"] }          # For async runtime
serde = { version = "1", features = ["derive"] }        # For JSON parsing
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
itertools = "0.12"
colored = "2.0"
csv = "1.3.1"
rayon = "1.10"


# reqwest = { version = "0.11", features = ["blocking"] }
# serde_json = "1.0"